// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicatinLocked renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexBasis": 0,
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 3,
            "justifyContent": "center",
            "paddingLeft": 48,
            "paddingRight": 48,
          },
          null,
          {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#445878",
              "fontSize": 20,
              "fontWeight": "200",
              "marginBottom": 64,
              "opacity": 0.6,
            },
            null,
          ]
        }
      >
        Maximum attempts reached
      </Text>
      <View
        style={
          [
            {
              "borderColor": "rgb(230, 231, 233)",
              "borderRadius": 4,
              "borderWidth": 2,
              "marginBottom": 64,
              "paddingBottom": 10,
              "paddingLeft": 30,
              "paddingRight": 30,
              "paddingTop": 10,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#445878",
                "fontFamily": "Courier",
                "fontSize": 20,
              },
              null,
            ]
          }
        >
          00:00
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#FC4349",
              "borderRadius": 32,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 64,
              "opacity": 0.6,
              "overflow": "hidden",
              "width": 64,
            },
            null,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          [
            {
              "color": "#445878",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        To protect your information, access has been locked for NaN minutes.
      </Text>
      <Text
        style={
          [
            {
              "color": "#445878",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Come back later and try again.
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "opacity": 0,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 32,
              "opacity": 0.6,
            },
            null,
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#7BCDD0",
              "borderRadius": 2,
              "opacity": 1,
              "paddingBottom": 16,
              "paddingLeft": 32,
              "paddingRight": 32,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "bold",
                },
                null,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PinCode renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 2,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        },
        null,
        {
          "opacity": 0,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "200",
            "lineHeight": 40,
          },
          null,
          {
            "color": "#9dafc8",
            "opacity": 1,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "200",
            "textAlign": "center",
          },
          null,
          {
            "color": "#9dafc8",
            "opacity": 1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "auto",
            "justifyContent": "center",
          },
          null,
        ]
      }
    />
  </View>
  <View
    style={
      {
        "flex": 7,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 1,
          "height": 88,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="1"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="2"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="3"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              3
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 1,
          "height": 88,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="4"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              4
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="5"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              5
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="6"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              6
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 1,
          "height": 88,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="7"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              7
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="8"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              8
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="9"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              9
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 0,
          "height": 88,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="0"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              0
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="delete"
          accessibilityState={
            {
              "disabled": true,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "rgb(211, 213, 218)",
                    "fontSize": 30,
                  },
                  {
                    "opacity": 0.5,
                  },
                  {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <Text
              style={
                [
                  {
                    "fontWeight": "200",
                    "marginTop": 5,
                  },
                  null,
                  {
                    "color": "rgb(211, 213, 218)",
                    "opacity": 0.5,
                  },
                ]
              }
            >
              delete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PinCodeChoose renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        },
        null,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 2,
            "flexDirection": "column",
            "justifyContent": "flex-end",
          },
          null,
          {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 20,
              "fontWeight": "200",
              "lineHeight": 40,
            },
            null,
            {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "200",
              "textAlign": "center",
            },
            null,
            {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "auto",
              "justifyContent": "center",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 7,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="1"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="2"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                2
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="3"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                3
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="4"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                4
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="5"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                5
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="6"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                6
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="7"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                7
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="8"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                8
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="9"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                9
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 0,
            "height": 88,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="0"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                0
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="delete"
            accessibilityState={
              {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "rgb(211, 213, 218)",
                      "fontSize": 30,
                    },
                    {
                      "opacity": 0.5,
                    },
                    {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
              <Text
                style={
                  [
                    {
                      "fontWeight": "200",
                      "marginTop": 5,
                    },
                    null,
                    {
                      "color": "rgb(211, 213, 218)",
                      "opacity": 0.5,
                    },
                  ]
                }
              >
                delete
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PinCodeEnter renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        },
        null,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 2,
            "flexDirection": "column",
            "justifyContent": "flex-end",
          },
          null,
          {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 20,
              "fontWeight": "200",
              "lineHeight": 40,
            },
            null,
            {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "200",
              "textAlign": "center",
            },
            null,
            {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "auto",
              "justifyContent": "center",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 7,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="1"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="2"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                2
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="3"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                3
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="4"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                4
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="5"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                5
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="6"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                6
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="7"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                7
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="8"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                8
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="9"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                9
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 0,
            "height": 88,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="0"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                0
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="delete"
            accessibilityState={
              {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "rgb(211, 213, 218)",
                      "fontSize": 30,
                    },
                    {
                      "opacity": 0.5,
                    },
                    {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
              <Text
                style={
                  [
                    {
                      "fontWeight": "200",
                      "marginTop": 5,
                    },
                    null,
                    {
                      "color": "rgb(211, 213, 218)",
                      "opacity": 0.5,
                    },
                  ]
                }
              >
                delete
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
